fix:修改项目配置

--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
 	"displayName": "codeComments",
 	"description": "",
 	"version": "0.0.1",
+	"publisher": "xuebin",
 	"engines": {
 		"vscode": "^1.55.0"
 	},
+	"icon": "images/comment.png",
 	"categories": [
 		"Other"
 	],
+	"repository": {
+			"type": "git",
+			"url": "https://github.com/xuebinWu/codecomments"
+	},
 	"activationEvents": [
 		"onCommand:codeComments.codeComments"
 	],
