--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "codecomments",
-	"displayName": "codeComments",
+	"displayName": "codeComment",
 	"description": "",
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"publisher": "xuebin",
 	"engines": {
 		"vscode": "^1.55.0"
@@ -35,14 +35,14 @@
 		],
 		"configuration": {
 			"type": "object",
-			"title": "CodeComments Configuration",
+			"title": "CodeComment Configuration",
 			"properties": {
-				"codeComments.Author": {
+				"codeComment.Author": {
 					"type": "string",
 					"default": "your name",
 					"description": "Code comment author"
 				},
-				"codeComments.tmpl": {
+				"codeComment.tmpl": {
 					"type": "string",
 					"default": "/**\n  *@Author: {{Author}}\n  *@date: {{DateTime}}\n  *@Desc:\n*/",
 					"description": "annotation template"
