--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "codecomments",
 	"displayName": "codeComment",
-	"description": "",
-	"version": "0.0.8",
+	"description": "code comment,代码注释,code annotation",
+	"version": "0.0.9",
 	"publisher": "xuebin",
 	"engines": {
-		"vscode": "^1.53.0"
+		"vscode": "^1.50.0"
 	},
 	"icon": "images/comment.png",
 	"categories": [
@@ -39,7 +39,7 @@
 			"properties": {
 				"codeComment.Author": {
 					"type": "string",
-					"default": "your name",
+					"default": "please config your name",
 					"description": "Code comment author"
 				},
 				"codeComment.tmpl": {
@@ -62,7 +62,7 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.53.0",
+		"@types/vscode": "^1.50.0",
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.0.4",
 		"@types/node": "^12.11.7",
